added license html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/base.css">
     <title>Sheldon</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="js/index/render.js"></script>
+    <link rel="stylesheet" href="css/base.css">
+    <script src="js/render.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
-
-
 </head>
 
 <body class="font-mono antialiased overflow-x-hidden">
