--- a/license/index.html
+++ b/license/index.html
@@ -1,20 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>License</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SHELDON | Your License</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/license.css">
 </head>
-<body>
-    <h1>License Page</h1>
-    <p>Your key:</p>
-    <h2 id="key">Loading...</h2>
 
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        const key = params.get("key");
+<body
+    class="font-mono antialiased h-screen w-full flex flex-col items-center justify-center grid-bg relative overflow-hidden">
+    <div class="absolute inset-0 bg-gradient-to-t from-hacker-black via-transparent to-transparent pointer-events-none">
+    </div>
 
-        document.getElementById("key").textContent =
-            key ? key : "No key provided";
-    </script>
+    <div class="relative z-10 w-full max-w-lg p-6">
+        <div class="w-full h-1 bg-gradient-to-r from-transparent via-hacker-blue to-transparent mb-8 opacity-50"></div>
+        <div
+            class="bg-hacker-dark border border-gray-800 p-8 rounded-lg shadow-[0_0_30px_rgba(59,130,246,0.1)] text-center relative overflow-hidden group">
+            <div class="absolute top-0 left-0 w-2 h-2 border-t-2 border-l-2 border-hacker-blue"></div>
+            <div class="absolute top-0 right-0 w-2 h-2 border-t-2 border-r-2 border-hacker-blue"></div>
+            <div class="absolute bottom-0 left-0 w-2 h-2 border-b-2 border-l-2 border-hacker-blue"></div>
+            <div class="absolute bottom-0 right-0 w-2 h-2 border-b-2 border-r-2 border-hacker-blue"></div>
+
+            <div class="mb-6 flex justify-center">
+                <div
+                    class="h-16 w-16 bg-hacker-blue-dim rounded-full flex items-center justify-center border border-hacker-blue/30 shadow-neon">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-hacker-blue" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
+                    </svg>
+                </div>
+            </div>
+
+            <h1 class="title-scanlines text-3xl font-bold text-white mb-2">ACCESS GRANTED</h1>
+            <p class="text-gray-400 text-sm mb-6">Your unique license key has been generated.</p>
+
+            <div class="relative mb-6 group">
+                <div class="absolute inset-0 bg-hacker-blue blur opacity-10 group-hover:opacity-20 transition-opacity">
+                </div>
+                <div class="relative bg-black border border-hacker-blue/50 p-4 rounded text-hacker-blue text-xl md:text-2xl font-bold tracking-wider break-all selection:bg-hacker-blue selection:text-black"
+                    id="key-container">
+                    <span id="key-text" class="opacity-50">Generating...</span>
+                </div>
+            </div>
+
+            <div class="flex flex-col gap-3">
+                <button onclick="copyToClipboard()" id="copy-btn"
+                    class="w-full py-3 bg-hacker-blue text-black font-bold hover:bg-blue-400 shadow-neon transition-all flex items-center justify-center gap-2 group">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 group-hover:scale-110 transition-transform"
+                        fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3" />
+                    </svg>
+                    <span>COPY KEY</span>
+                </button>
+
+                <a href="/" class="text-xs text-gray-600 hover:text-hacker-blue mt-2 transition-colors">
+                    [ Return to Homepage ]
+                </a>    
+            </div>
+
+        </div>
+
+        <p class="text-center text-gray-700 text-xs mt-8">
+            &copy; 2026 Sheldon Software. Do not share your key.
+        </p>
+    </div>
+
+   <script src="../js/render.js"></script>
+   <script src="../js/license/index.js"></script>
 </body>
+
 </html>
