--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
                     <p class="text-sm text-gray-500 mb-6">/ 2 days</p>
 
                     <button
-                        class="w-full py-3 border border-hacker-blue text-hacker-blue hover:bg-hacker-blue hover:text-black font-bold transition-all">
+                        class="w-full py-3 border border-hacker-blue text-hacker-blue hover:bg-hacker-blue hover:text-black font-bold transition-all"
+                        onclick="window.location.href='/checkout?type=daily'"></button>
                         PURCHASE
                     </button>
                 </div>
@@ -161,8 +162,9 @@
                     <p class="text-sm text-gray-500 mb-6">/ One-time</p>
 
                     <button
-                        class="w-full py-3 bg-hacker-blue text-black font-bold hover:bg-blue-400 shadow-neon transition-all">
-                        GET LIFETIME
+                        class="w-full py-3 bg-hacker-blue text-black font-bold hover:bg-blue-400 shadow-neon transition-all"
+                        onclick="window.location.href='/checkout?type=lifetime'">
+                        PURCHASE
                     </button>
                 </div>
 
