--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                     <button
                         class="w-full py-3 border border-hacker-blue text-hacker-blue hover:bg-hacker-blue hover:text-black font-bold transition-all"
-                        onclick="window.location.href='/checkout?type=daily'"></button>
+                        onclick="window.location.href='/checkout?type=daily'">
                         PURCHASE
                     </button>
                 </div>
