--- a/checkout/index.html
+++ b/checkout/index.html
@@ -8,8 +8,7 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
-    <script
-        src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=USD"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
 
     <link href="../css/checkout.css" rel="stylesheet">
     <script src="../js/render.js"></script>
@@ -89,20 +88,12 @@
                     </button>
                 </div>
             </div>
-
+            
             <div id="content-paypal" class="block animate-pulse-slow">
                 <div class="bg-hacker-black border border-gray-700 p-6 rounded mb-6 text-center">
-                    <p class="text-gray-400 text-sm mb-4">A popup should open for you to login and pay.</p>
-                    <!-- <button class="w-full py-4 bg-[#0070BA] hover:bg-[#005ea6] text-white font-bold rounded shadow-[0_0_15px_#0070BA] transition-all flex justify-center items-center gap-2 group">
-                        <span>Pay with</span> 
-                        <span class="font-extrabold italic">PayPal</span>
-                    </button>
-                    <div class="flex justify-center gap-4 mt-4 opacity-50 grayscale hover:grayscale-0 transition-all">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" class="h-6" alt="PayPal">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" class="h-6" alt="Mastercard">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Visa_Inc._logo.svg" class="h-6" alt="Visa">
-                    </div> -->
+                    <cr>
                     <div id="paypal"></div>
+                    <!-- <p class="text-gray-400 text-sm mb-4">A popup should open for you to login and pay.</p> -->
                 </div>
             </div>
 
@@ -150,7 +141,7 @@
 
     <script type="module" src="../js/checkout/index.js"></script>
     <script src="../js/checkout/tabs.js"></script>
-    <script src="../js/checkout/payment/paypal.js"></script>
+    <script type="module" src="../js/checkout/payment/paypal.js"></script>
 </body>
 
 </html>
