--- a/license/index.html
+++ b/license/index.html
@@ -73,7 +73,7 @@
         </p>
     </div>
 
-   <script src="../js/render.js"></script>
+   <script src="../js/render/render.js"></script>
    <script src="../js/license/index.js"></script>
 </body>
 
