--- a/license/index.html
+++ b/license/index.html
@@ -8,6 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <base href="/projectsheldon.github.io/">
 
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/license.css">
