--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                     <button
                         class="w-full py-3 border border-hacker-blue text-hacker-blue hover:bg-hacker-blue hover:text-black font-bold transition-all"
-                        onclick="window.location.href='checkout/?type=daily'">
+                        onclick="window.location.href='checkout?type=daily'">
                         PURCHASE
                     </button>
                 </div>
