--- a/checkout/index.html
+++ b/checkout/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sheldon</title>
+    <title>Sheldon - Checkout</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
@@ -14,17 +14,54 @@
     <script src="../js/render/render.js"></script>
 </head>
 
-<body class="font-mono antialiased min-h-screen grid-bg flex flex-col items-center py-10 px-4 relative">
+<body class="font-mono antialiased min-h-screen grid-bg flex flex-col items-center pt-24 pb-10 px-4 relative">
+
+    <!-- ================= ADDED TOP BAR START ================= -->
+    <nav class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-6 py-4 bg-black/60 backdrop-blur-md border-b border-hacker-blue/20">
+        <div class="flex items-center gap-4">
+            <!-- Discord Icon -->
+            <a href="https://discord.gg/SbGUYquj8b" target="_blank"
+                class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
+                <span class="sr-only">Discord</span>
+                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                    <path fill-rule="evenodd"
+                        d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2763-3.68-.2763-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.419-2.1568 2.419zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.419-2.1568 2.419z"
+                        clip-rule="evenodd" />
+                </svg>
+            </a>
+
+            <!-- YouTube Icon -->
+            <a href="https://youtube.com" target="_blank"
+                class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
+                <span class="sr-only">YouTube</span>
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                    <path fill-rule="evenodd"
+                        d="M19.812 5.418c.861.23 1.538.907 1.768 1.768C21.998 8.746 22 12 22 12s0 3.255-.418 4.814a2.504 2.504 0 0 1-1.768 1.768c-1.56.419-7.814.419-7.814.419s-6.255 0-7.814-.419a2.505 2.505 0 0 1-1.768-1.768C2 15.255 2 12 2 12s0-3.255.417-4.814a2.507 2.507 0 0 1 1.768-1.768C5.744 5 11.998 5 11.998 5s6.255 0 7.814.418ZM15.194 12 10 15V9l5.194 3Z"
+                        clip-rule="evenodd" />
+                </svg>
+            </a>
+        </div>
+
+        <!-- RIGHT SIDE: AUTH -->
+        <div class="flex items-center">
+            <!-- Avatar/Name will be injected here via JS -->
+            
+            <button id="auth-btn" onclick="LoginButton()"
+                class="px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
+                LOGIN
+            </button>
+        </div>
+    </nav>
+    <!-- ================= ADDED TOP BAR END ================= -->
+    
     <div
         class="fixed inset-0 bg-gradient-to-t from-hacker-black via-transparent to-transparent pointer-events-none -z-10">
     </div>
 
-    <header class="w-full max-w-5xl flex justify-between items-center mb-10">
-        <div class="text-2xl font-extrabold text-white tracking-tighter">
-            SHELDON
-        </div>
+    <!-- Modified Header: Removed the large "SHELDON" text because it's now in the navbar or redundant -->
+    <header class="w-full max-w-5xl flex justify-end items-center mb-6">
         <a href="/" class="text-sm text-gray-500 hover:text-hacker-blue flex items-center gap-2 transition-colors">
-            <span>[ RETURN ]</span>
+            <span>[ RETURN HOME ]</span>
         </a>
     </header>
 
@@ -142,7 +179,8 @@
     <script type="module" src="../js/checkout/index.js"></script>
     <script src="../js/checkout/tabs.js"></script>
     <script type="module" src="../js/checkout/payment/paypal.js"></script>
-    <script type="module" src="../js/auth/discord.js"></script>
+
+    <script type="module" src="../js/auth/ui.js"></script>
 </body>
 
 </html>
