--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/base.css">
     <script src="js/render/render.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
-    <base href="/projectsheldon.github.io/">
+    <base href="/">
 </head>
 
 <body class="font-mono antialiased overflow-x-hidden bg-black">
