--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- hi pls forgive me for using ai for the frontend but idk how to make website in html -->
+<!-- but to be fair i did make most of the backend alongside payment system so thats a dub for me -->
+<!-- yeah also hi -->
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 
@@ -46,7 +50,6 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
     <section id="hero"
         class="h-screen w-full flex flex-col justify-center items-center relative grid-bg border-b border-hacker-blue/30 overflow-hidden">
         <canvas id="bg-canvas" class="absolute inset-0 z-0 pointer-events-none"></canvas>
@@ -93,7 +96,6 @@
         </div>
     </section>
 
-    <!-- Rundown Section -->
     <section class="py-24 bg-hacker-dark relative">
         <div class="max-w-6xl mx-auto px-6">
             <div class="text-center mb-16">
