--- a/checkout/index.html
+++ b/checkout/index.html
@@ -160,7 +160,7 @@
                         </div>
                     </div>
 
-                    <button id="crypto-confirm-btn"
+                    <button
                         class="w-full mt-6 py-4 bg-blue-600 hover:bg-blue-500 text-white font-bold rounded shadow-[0_0_15px_rgba(59,130,246,0.5)] transition-all">
                         I HAVE SENT PAYMENT
                     </button>
@@ -177,7 +177,7 @@
 
     <script src="../js/render/notification.js"></script>
     <script type="module" src="../js/checkout/index.js"></script>
-    <script src="../js/checkout/tabs.js"></script>
+    <script type="module" src="../js/checkout/tabs.js"></script>
     <script type="module" src="../js/checkout/payment/paypal.js"></script>
 
     <script type="module" src="../js/auth/ui.js"></script>
