--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
                     <p class="text-sm text-gray-500 mb-6">/ 8 hours</p>
 
                     <button
-                        class="w-full py-3 border border-gray-600 text-white hover:bg-white hover:text-black font-bold transition-all">
+                        class="w-full py-3 border border-gray-600 text-white hover:bg-white hover:text-black font-bold transition-all"
+                        onclick="window.location.href='https://work.ink/236z/sheldon-license'">
                         GET KEY
                     </button>
                 </div>
