--- a/license/index.html
+++ b/license/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheldon</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <base href="/projectsheldon.github.io/">
+    <script src="../../js/managers/render/options.js"></script>
+    
+    <link rel="stylesheet" href="../../css/license.css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/license.css">
+    <base href="/">
 </head>
 
 <body
@@ -47,7 +48,7 @@
                 </div>
                 <div class="relative bg-black border border-hacker-blue/50 p-4 rounded text-hacker-blue text-xl md:text-2xl font-bold tracking-wider break-all selection:bg-hacker-blue selection:text-black"
                     id="key-container">
-                    <span id="key-text" class="opacity-50">Generating...</span>
+                    <span id="key-text" class="opacity-50">Error?</span>
                 </div>
             </div>
 
@@ -73,9 +74,6 @@
             &copy; 2026 Sheldon Software. Do not share your key.
         </p>
     </div>
-
-   <script src="../js/render/render.js"></script>
-   <script src="../js/license/index.js"></script>
 </body>
 
 </html>
