--- a/checkout/index.html
+++ b/checkout/index.html
@@ -11,15 +11,13 @@
     <script src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
 
     <link href="../css/checkout.css" rel="stylesheet">
-    <script src="../js/render/render.js"></script>
+    <script src="./js/managers/render/options.js"></script>
 </head>
 
 <body class="font-mono antialiased min-h-screen grid-bg flex flex-col items-center pt-24 pb-10 px-4 relative">
 
-    <!-- ================= ADDED TOP BAR START ================= -->
     <nav class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-6 py-4 bg-black/60 backdrop-blur-md border-b border-hacker-blue/20">
         <div class="flex items-center gap-4">
-            <!-- Discord Icon -->
             <a href="https://discord.gg/SbGUYquj8b" target="_blank"
                 class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
                 <span class="sr-only">Discord</span>
@@ -30,7 +28,6 @@
                 </svg>
             </a>
 
-            <!-- YouTube Icon -->
             <a href="https://youtube.com" target="_blank"
                 class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
                 <span class="sr-only">YouTube</span>
@@ -42,23 +39,18 @@
             </a>
         </div>
 
-        <!-- RIGHT SIDE: AUTH -->
-        <div class="flex items-center">
-            <!-- Avatar/Name will be injected here via JS -->
-            
+        <div class="flex items-center">            
             <button id="auth-btn" onclick="LoginButton()"
                 class="px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
                 LOGIN
             </button>
         </div>
     </nav>
-    <!-- ================= ADDED TOP BAR END ================= -->
     
     <div
         class="fixed inset-0 bg-gradient-to-t from-hacker-black via-transparent to-transparent pointer-events-none -z-10">
     </div>
 
-    <!-- Modified Header: Removed the large "SHELDON" text because it's now in the navbar or redundant -->
     <header class="w-full max-w-5xl flex justify-end items-center mb-6">
         <a href="/" class="text-sm text-gray-500 hover:text-hacker-blue flex items-center gap-2 transition-colors">
             <span>[ RETURN HOME ]</span>
@@ -174,13 +166,6 @@
         &copy; 2026 Sheldon Software. All rights reserved. <br>
         <span class="opacity-50">Refunds are manual. I review transactions personally.</span>
     </footer>
-
-    <script src="../js/render/notification.js"></script>
-    <script type="module" src="../js/checkout/index.js"></script>
-    <script type="module" src="../js/checkout/tabs.js"></script>
-    <script type="module" src="../js/checkout/payment/paypal.js"></script>
-
-    <script type="module" src="../js/auth/ui.js"></script>
 </body>
 
 </html>
