--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheldon</title>
+
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./js/managers/render/options.js"></script>
+    
     <link rel="stylesheet" href="css/base.css">
-    <script src="js/render/render.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
+
     <base href="/">
 </head>
 
 <body class="font-mono antialiased overflow-x-hidden bg-black">
-
     <nav
         class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-6 py-4 bg-black/60 backdrop-blur-md border-b border-hacker-blue/20">
         <div class="flex items-center gap-4">
@@ -42,14 +44,14 @@
             </a>
         </div>
 
-        <div class="flex items-center">            
-            <button id="auth-btn" onclick="LoginButton()"
+        <div class="flex items-center">
+            <button id="auth-btn"
                 class="px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
                 LOGIN
             </button>
         </div>
     </nav>
-
+e
     <section id="hero"
         class="h-screen w-full flex flex-col justify-center items-center relative grid-bg border-b border-hacker-blue/30 overflow-hidden">
         <canvas id="bg-canvas" class="absolute inset-0 z-0 pointer-events-none"></canvas>
@@ -154,8 +156,6 @@
         </div>
     </section>
 
-    <script src="js/render/polygons.js"></script>
-
     <section id="pricing" class="py-24 bg-black relative border-t border-gray-900">
         <div class="max-w-7xl mx-auto px-6">
             <div class="text-center mb-16">
@@ -164,48 +164,7 @@
                 <p class="text-gray-500">Same features. Pls support me</p>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-
-                <div
-                    class="relative bg-hacker-dark border border-gray-800 p-8 flex flex-col hover:border-gray-600 transition-all">
-                    <h3 class="text-2xl font-bold text-white mb-2">Free</h3>
-                    <div class="text-4xl font-bold text-hacker-blue mb-1">2 CHECKPOINTS</div>
-                    <p class="text-sm text-gray-500 mb-6">/ 8 hours</p>
-
-                    <button
-                        class="w-full py-3 border border-gray-600 text-white hover:bg-white hover:text-black font-bold transition-all"
-                        onclick="window.location.href='https://work.ink/236z/sheldon-license'">
-                        GET KEY
-                    </button>
-                </div>
-
-                <div
-                    class="relative bg-hacker-dark border border-gray-800 p-8 flex flex-col hover:border-gray-600 transition-all">
-                    <h3 class="text-2xl font-bold text-white mb-2">Day Pass</h3>
-                    <div class="text-4xl font-bold text-hacker-blue mb-1">€2.00</div>
-                    <p class="text-sm text-gray-500 mb-6">/ 2 days</p>
-
-                    <button
-                        class="w-full py-3 border border-hacker-blue text-hacker-blue hover:bg-hacker-blue hover:text-black font-bold transition-all"
-                        onclick="window.location.href='/checkout?type=daily'">
-                        PURCHASE
-                    </button>
-                </div>
-
-                <div
-                    class="relative bg-hacker-dark border border-hacker-blue p-8 flex flex-col shadow-[0_0_20px_rgba(59,130,246,0.15)]">
-                    <div class="absolute top-0 right-0 bg-hacker-blue text-black text-xs font-bold px-3 py-1">
-                        RECOMMENDED</div>
-                    <h3 class="text-2xl font-bold text-white mb-2">Lifetime</h3>
-                    <div class="text-4xl font-bold text-hacker-blue mb-1">€7.99</div>
-                    <p class="text-sm text-gray-500 mb-6">/ One-time</p>
-
-                    <button
-                        class="w-full py-3 bg-hacker-blue text-black font-bold hover:bg-blue-400 shadow-neon transition-all"
-                        onclick="window.location.href='/checkout?type=lifetime'">
-                        PURCHASE
-                    </button>
-                </div>
+            <div id="pricing-grid" class="grid grid-cols-1 md:grid-cols-3 gap-8">
 
             </div>
         </div>
@@ -227,8 +186,12 @@
         </div>
     </footer>
 
-<script type="module" src="js/auth/ui.js"></script>
-
+    <script src="./js/managers/discord/api.js" type="module"></script>
+    <script src="./js/managers/discord/render.js" type="module"></script>
+    <script type="module">
+        import DiscordRender from "./js/managers/discord/render.js";
+        document.getElementById('auth-btn').addEventListener('click', () => DiscordRender.LoginLogic());
+    </script>
 </body>
 
 </html>
