--- a/checkout/index.html
+++ b/checkout/index.html
@@ -8,15 +8,25 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
+    <!-- Note: Ensure you have your actual Client ID here -->
     <script src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
 
     <link href="../css/checkout.css" rel="stylesheet">
     <script src="../js/managers/render/options.js"></script>
+
+    <style>
+        /* Mobile height fix */
+        .min-h-safe {
+            min-height: 100vh;
+            min-height: 100dvh;
+        }
+    </style>
 </head>
 
-<body class="font-mono antialiased min-h-screen grid-bg flex flex-col items-center pt-24 pb-10 px-4 relative">
+<body class="font-mono antialiased min-h-safe grid-bg flex flex-col items-center pt-20 md:pt-24 pb-10 px-4 relative">
 
-    <nav class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-6 py-4 bg-black/60 backdrop-blur-md border-b border-hacker-blue/20">
+    <!-- Navbar: px-4 for mobile, px-6 for PC -->
+    <nav class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-4 md:px-6 py-4 bg-black/60 backdrop-blur-md border-b border-hacker-blue/20">
         <div class="flex items-center gap-4">
             <a href="https://discord.gg/SbGUYquj8b" target="_blank"
                 class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
@@ -40,8 +50,8 @@
         </div>
 
         <div class="flex items-center">            
-            <button id="auth-btn" onclick="LoginButton()"
-                class="px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
+            <button id="auth-btn"
+                class="px-4 md:px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
                 LOGIN
             </button>
         </div>
@@ -51,20 +61,21 @@
         class="fixed inset-0 bg-gradient-to-t from-hacker-black via-transparent to-transparent pointer-events-none -z-10">
     </div>
 
-    <header class="w-full max-w-5xl flex justify-end items-center mb-6">
-        <a href="/" class="text-sm text-gray-500 hover:text-hacker-blue flex items-center gap-2 transition-colors">
+    <!-- Header Return Link -->
+    <header class="w-full max-w-6xl flex justify-center md:justify-end items-center mb-6 px-2">
+        <a href="/" class="text-xs md:text-sm text-gray-500 hover:text-hacker-blue flex items-center gap-2 transition-colors">
             <span>[ RETURN HOME ]</span>
         </a>
     </header>
 
+    <!-- Main Card -->
+    <!-- Added flex-col for mobile, flex-row for PC -->
     <main
-    class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 min-h-[500px]">
+    class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
 
-        <!-- <div
-            class="absolute top-0 left-0 w-full h-0.5 bg-gradient-to-r from-transparent via-hacker-blue to-transparent">
-        </div> -->
-
-        <div class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-8 flex flex-col">
+        <!-- Left Column (Order Info) -->
+        <!-- Added order-1 so it stays on top on mobile -->
+        <div class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
             <h2 class="text-gray-400 text-xs uppercase tracking-widest mb-6">Your Order</h2>
 
             <div class="flex items-start gap-4 mb-6">
@@ -76,11 +87,12 @@
                     </svg>
                 </div>
                 <div>
-                    <h3 id="product-name" class="text-white font-bold text-lg">{product-name}</h3>
-                    <p id="product-desc" class="text-gray-500 text-sm">thank you so much</p>
+                    <h3 id="product-name" class="text-white font-bold text-lg leading-tight">{product-name}</h3>
+                    <p id="product-desc" class="text-gray-500 text-sm mt-1">thank you so much</p>
                 </div>
             </div>
 
+            <!-- Total Price Section -->
             <div class="mt-auto space-y-3 pt-6 border-t border-gray-800/50">
                 <div class="flex justify-between text-white font-bold text-xl pt-2">
                     <span>Total</span>
@@ -89,17 +101,20 @@
             </div>
         </div>
 
-        <div class="w-full md:w-2/3 p-8">
-            <h1 class="title-scanlines text-3xl font-bold text-white mb-8">CHECKOUT</h1>
+        <!-- Right Column (Checkout/Paypal) -->
+        <!-- Added order-2 -->
+        <div class="w-full md:w-2/3 p-6 md:p-8 order-2">
+            <h1 class="title-scanlines text-2xl md:text-3xl font-bold text-white mb-6 md:mb-8">CHECKOUT</h1>
 
             <div class="mb-8">
+                <!-- Paypal Buttons Container should go here usually -->
+                <div id="paypal-button-container" class="w-full"></div>
             </div>
-
         </div>
     </main>
 
-    <footer class="text-gray-600 text-xs text-center mt-10">
-       
+    <footer class="text-gray-600 text-xs text-center mt-10 mb-4">
+        &copy; 2026 Sheldon Software
     </footer>
 
     <script type="module">
