--- a/termsofservice.html
+++ b/termsofservice.html
@@ -89,7 +89,7 @@
                             By downloading or purchasing Sheldon, you acknowledge that you are using this software entirely at your own risk. 
                         </p>
                         <p class="text-sm leading-relaxed text-red-400">
-                            I'm NOT responsible for any administrative actions taken against your account, including but not limited to: suspensions, bans, or account deletions.
+                            Im NOT responsible for any administrative actions taken against your game account, such as: suspensions, bans, or account deletions.
                         </p>
                     </div>
                 </section>
@@ -103,9 +103,8 @@
                             Sheldon is designed with user privacy in mind. We explicitly state the following:
                         </p>
                         <ul class="list-disc list-inside text-sm space-y-2 ml-2 text-gray-400">
-                            <li><span class="text-white">NO Telemetry:</span> I don't collect usage, screenshots or any stuff like that.</li>
-                            <li><span class="text-white">NO Data Harvesting:</span> I don't scan files, e.g Documents, Saved Cookies. But only live Processes.</li>
-                            <li><span class="text-white">HWID Usage:</span> Your Hardware ID is collected <span class="underline">only</span> for the purpose of license verification (binding your key to your PC).</li>
+                            <li><span class="text-white">Telemetry:</span> I dont collect usage, screenshots or any stuff like that.</li>
+                            <li><span class="text-white">Hardware Id:</span> <span class="underline">Only</span> for the purpose of license verification (binding your key to your PC).</li>
                         </ul>
                     </div>
                 </section>
