--- a/checkout/index.html
+++ b/checkout/index.html
@@ -71,6 +71,17 @@
     <main
         class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
 
+        <!-- Login Overlay -->
+        <div id="login-overlay" class="absolute inset-0 bg-black/80 backdrop-blur-sm flex items-center justify-center z-20 hidden">
+            <div class="text-center">
+                <h2 class="text-white text-2xl font-bold mb-4">Login Required</h2>
+                <p class="text-gray-400 mb-6">You must login with Discord to continue with your purchase.</p>
+                <button id="overlay-login-btn" class="px-6 py-3 bg-hacker-blue text-black font-bold rounded hover:bg-hacker-blue/80 transition-colors">
+                    Login with Discord
+                </button>
+            </div>
+        </div>
+
         <div
             class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
             <h2 class="text-gray-400 text-xs uppercase tracking-widest mb-6">Your Order</h2>
@@ -101,13 +112,7 @@
             <h1 class="title-scanlines text-2xl md:text-3xl font-bold text-white mb-6 md:mb-8">CHECKOUT</h1>
 
             <div class="mb-8">
-                <div id="content-paypal" class="block animate-pulse-slow">
-                    <div class="bg-hacker-black border border-gray-700 p-6 rounded mb-6 text-center">
-                        <cr>
-                            <div id="paypal"></div>
-                            <!-- <p class="text-gray-400 text-sm mb-4">A popup should open for you to login and pay.</p> -->
-                    </div>
-                </div>
+                <div id="paypal-button-container" class="w-full"></div>
             </div>
         </div>
     </main>
