--- a/checkout/index.html
+++ b/checkout/index.html
@@ -8,9 +8,8 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
-    <!-- Note: Ensure you have your actual Client ID here -->
-    <script
-        src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
+
+    <script src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
 
     <link href="../css/checkout.css" rel="stylesheet">
     <script src="../js/managers/render/options.js"></script>
@@ -20,25 +19,61 @@
             min-height: 100vh;
             min-height: 100dvh;
         }
+
+        .text-hacker-blue {
+            color: #3b82f6;
+        }
+
+        .bg-hacker-blue {
+            background-color: #3b82f6;
+        }
+
+        .border-hacker-blue {
+            border-color: #3b82f6;
+        }
+
+        .bg-hacker-dark {
+            background-color: #0f1012;
+        }
+
+        .bg-hacker-blue-dim {
+            background-color: rgba(59, 130, 246, 0.1);
+        }
+
+        .tab-content {
+            transition: opacity 0.25s ease;
+        }
+
+        .tab-active {
+            border-bottom: 2px solid #3b82f6;
+            color: #fff;
+        }
+
+        .tab-inactive {
+            border-bottom: 2px solid transparent;
+            color: #6b7280;
+        }
+
+        .tab-inactive:hover {
+            color: #3b82f6;
+        }
     </style>
 </head>
 
-<body class="font-mono antialiased min-h-safe grid-bg flex flex-col items-center pt-20 md:pt-24 pb-10 px-4 relative">
-
-    <nav
-        class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-4 md:px-6 py-4 bg-black/60 backdrop-blur-md border-b border-hacker-blue/20">
+<body class="font-mono antialiased min-h-safe grid-bg flex flex-col items-center pt-20 md:pt-24 pb-10 px-4 relative bg-black text-gray-300">
+    <nav class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-4 md:px-6 py-4 bg-black/60 backdrop-blur-md border-b border-blue-500/20">
         <div class="flex items-center gap-4">
-            <a href="https://discord.gg/SbGUYquj8b" target="_blank"
+           <a href="https://discord.gg/SbGUYquj8b" target="_blank"
                 class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
                 <span class="sr-only">Discord</span>
-                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path fill-rule="evenodd"
                         d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2763-3.68-.2763-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2986 12.2986 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.061.061 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.419-2.1568 2.419zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.419-2.1568 2.419z"
                         clip-rule="evenodd" />
                 </svg>
             </a>
 
-            <a href="https://youtube.com" target="_blank"
+            <a href="https://www.youtube.com/@chealepix" target="_blank"
                 class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
                 <span class="sr-only">YouTube</span>
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -48,28 +83,24 @@
                 </svg>
             </a>
         </div>
-
         <div class="flex items-center">
-            <button id="auth-btn"
-                class="px-4 md:px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
+            <button id="auth-btn" class="px-4 md:px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
                 LOGIN
             </button>
         </div>
     </nav>
 
-    <div
-        class="fixed inset-0 bg-gradient-to-t from-hacker-black via-transparent to-transparent pointer-events-none -z-10">
-    </div>
+    <div class="fixed inset-0 bg-gradient-to-t from-black via-transparent to-transparent pointer-events-none -z-10"></div>
 
+    <!-- Header -->
     <header class="w-full max-w-6xl flex justify-center md:justify-end items-center mb-6 px-2">
-        <a href="/"
-            class="text-xs md:text-sm text-gray-500 hover:text-hacker-blue flex items-center gap-2 transition-colors">
-            <span>[ RETURN HOME ]</span>
+        <a href="/" class="text-xs md:text-sm text-gray-500 hover:text-hacker-blue transition-colors">
+            [ RETURN HOME ]
         </a>
     </header>
 
-    <main
-        class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
+    <!-- Main Checkout -->
+    <main class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
 
         <!-- Login Overlay -->
         <div id="login-overlay" class="absolute inset-0 bg-black/80 backdrop-blur-sm flex items-center justify-center z-20 hidden">
@@ -82,16 +113,13 @@
             </div>
         </div>
 
-        <div
-            class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
+        <!-- Order Summary -->
+        <div class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
             <h2 class="text-gray-400 text-xs uppercase tracking-widest mb-6">Your Order</h2>
-
             <div class="flex items-start gap-4 mb-6">
-                <div
-                    class="w-16 h-16 bg-hacker-blue-dim border border-hacker-blue/30 rounded flex items-center justify-center flex-shrink-0">
+                <div class="w-16 h-16 bg-hacker-blue-dim border border-hacker-blue/30 rounded flex items-center justify-center flex-shrink-0">
                     <svg class="w-8 h-8 text-hacker-blue" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
                     </svg>
                 </div>
                 <div>
@@ -99,7 +127,6 @@
                     <p id="product-desc" class="text-gray-500 text-sm mt-1">Includes future updates.</p>
                 </div>
             </div>
-
             <div class="mt-auto space-y-3 pt-6 border-t border-gray-800/50">
                 <div class="flex justify-between text-white font-bold text-xl pt-2">
                     <span>Total</span>
@@ -109,26 +136,68 @@
         </div>
 
         <div class="w-full md:w-2/3 p-6 md:p-8 order-2">
-            <h1 class="title-scanlines text-2xl md:text-3xl font-bold text-white mb-6 md:mb-8">CHECKOUT</h1>
+            <h1 class="title-scanlines text-2xl md:text-3xl font-bold text-white mb-6">CHECKOUT</h1>
 
-            <div class="mb-8">
-                <div id="paypal-button-container" class="w-full"></div>
+            <div class="flex gap-6 border-b border-gray-800 mb-8" id="tabs">
+                <button class="tab-btn tab-active pb-3 text-sm font-bold tracking-wider transition-colors" data-tab="paypal">
+                    PAYPAL
+                </button>
+
+                <button class="tab-btn tab-inactive pb-3 text-sm font-bold tracking-wider transition-colors" data-tab="crypto">
+                    CRYPTO
+                </button>
+            </div>
+
+            <div class="space-y-6">
+                <div class="tab-content block" data-content="paypal">
+                    <div class="bg-black/40 border border-gray-800 rounded p-6">
+                        <div id="paypal-button-container"></div>
+                    </div>
+                </div>
+
+                <div class="tab-content hidden" data-content="crypto">
+                    <div class="bg-black/40 border border-gray-800 rounded p-6">
+                        Crypto checkout coming soon.
+                    </div>
+                </div>
+               
             </div>
         </div>
+
     </main>
 
+    <!-- Footer -->
     <footer class="text-gray-600 text-xs text-center mt-10 mb-4">
         &copy; 2026 Sheldon Software
     </footer>
 
     <script src="../js/html/checkout.js" type="module"></script>
-    <script type="module">
-        import DiscordRender from "../js/managers/discord/render.js";
 
-        const authBtn = document.getElementById('auth-btn');
-        if (authBtn) {
-            authBtn.addEventListener('click', () => DiscordRender.LoginLogic());
-        }
+    <script>
+        const tabButtons = document.querySelectorAll(".tab-btn");
+        const tabContents = document.querySelectorAll(".tab-content");
+
+        tabButtons.forEach(btn => {
+            btn.addEventListener("click", () => {
+                const target = btn.dataset.tab;
+
+                tabButtons.forEach(b => {
+                    b.classList.remove("tab-active");
+                    b.classList.add("tab-inactive");
+                });
+
+                tabContents.forEach(c => {
+                    c.classList.add("hidden");
+                    c.classList.remove("block");
+                });
+
+                btn.classList.add("tab-active");
+                btn.classList.remove("tab-inactive");
+
+                document.querySelector(`[data-content="${target}"]`).classList.remove("hidden");
+                document.querySelector(`[data-content="${target}"]`).classList.add("block");
+            });
+        });
     </script>
 </body>
 
