--- a/checkout/index.html
+++ b/checkout/index.html
@@ -9,7 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
 
-    <script src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
+    <script
+        src="https://www.paypal.com/sdk/js?client-id=Ac4pEXZjrMyP7l5K8FVEgipGAflzIO2__tficxrHykX0FCScVAGstxzBxyiThzMuSs-fD6dI_a4JNFmo&currency=EUR"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+    <link rel="icon" type="image/png" href="../favicon/favicon.ico">
 
     <link href="../css/checkout.css" rel="stylesheet">
     <script src="../js/managers/render/options.js"></script>
@@ -60,10 +63,12 @@
     </style>
 </head>
 
-<body class="font-mono antialiased min-h-safe grid-bg flex flex-col items-center pt-20 md:pt-24 pb-10 px-4 relative bg-black text-gray-300">
-    <nav class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-4 md:px-6 py-4 bg-black/60 backdrop-blur-md border-b border-blue-500/20">
+<body
+    class="font-mono antialiased min-h-safe grid-bg flex flex-col items-center pt-20 md:pt-24 pb-10 px-4 relative bg-black text-gray-300">
+    <nav
+        class="fixed top-0 left-0 w-full z-50 flex justify-between items-center px-4 md:px-6 py-4 bg-black/60 backdrop-blur-md border-b border-blue-500/20">
         <div class="flex items-center gap-4">
-           <a href="https://discord.gg/SbGUYquj8b" target="_blank"
+            <a href="https://discord.gg/SbGUYquj8b" target="_blank"
                 class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
                 <span class="sr-only">Discord</span>
                 <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -76,7 +81,7 @@
             <a href="https://www.youtube.com/@chealepix" target="_blank"
                 class="text-gray-400 hover:text-hacker-blue transition-all duration-300 transform hover:scale-110 hover:drop-shadow-[0_0_8px_rgba(59,130,246,0.8)]">
                 <span class="sr-only">YouTube</span>
-                <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path fill-rule="evenodd"
                         d="M19.812 5.418c.861.23 1.538.907 1.768 1.768C21.998 8.746 22 12 22 12s0 3.255-.418 4.814a2.504 2.504 0 0 1-1.768 1.768c-1.56.419-7.814.419-7.814.419s-6.255 0-7.814-.419a2.505 2.505 0 0 1-1.768-1.768C2 15.255 2 12 2 12s0-3.255.417-4.814a2.507 2.507 0 0 1 1.768-1.768C5.744 5 11.998 5 11.998 5s6.255 0 7.814.418ZM15.194 12 10 15V9l5.194 3Z"
                         clip-rule="evenodd" />
@@ -84,13 +89,15 @@
             </a>
         </div>
         <div class="flex items-center">
-            <button id="auth-btn" class="px-4 md:px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
+            <button id="auth-btn"
+                class="px-4 md:px-6 py-1.5 border border-hacker-blue text-hacker-blue text-sm font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 shadow-[0_0_10px_rgba(59,130,246,0.2)] hover:shadow-[0_0_15px_rgba(59,130,246,0.5)]">
                 LOGIN
             </button>
         </div>
     </nav>
 
-    <div class="fixed inset-0 bg-gradient-to-t from-black via-transparent to-transparent pointer-events-none -z-10"></div>
+    <div class="fixed inset-0 bg-gradient-to-t from-black via-transparent to-transparent pointer-events-none -z-10">
+    </div>
 
     <!-- Header -->
     <header class="w-full max-w-6xl flex justify-center md:justify-end items-center mb-6 px-2">
@@ -100,26 +107,32 @@
     </header>
 
     <!-- Main Checkout -->
-    <main class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
+    <main
+        class="w-full max-w-6xl bg-hacker-dark border border-gray-800 rounded-lg shadow-2xl overflow-hidden flex flex-col md:flex-row relative z-10 md:min-h-[500px]">
 
         <!-- Login Overlay -->
-        <div id="login-overlay" class="absolute inset-0 bg-black/80 backdrop-blur-sm flex items-center justify-center z-20 hidden">
+        <div id="login-overlay"
+            class="absolute inset-0 bg-black/80 backdrop-blur-sm flex items-center justify-center z-20 hidden">
             <div class="text-center">
                 <h2 class="text-white text-2xl font-bold mb-4">Login Required</h2>
                 <p class="text-gray-400 mb-6">You must login with Discord to continue with your purchase.</p>
-                <button id="overlay-login-btn" class="px-6 py-3 bg-hacker-blue text-black font-bold rounded hover:bg-hacker-blue/80 transition-colors">
+                <button id="overlay-login-btn"
+                    class="px-6 py-3 bg-hacker-blue text-black font-bold rounded hover:bg-hacker-blue/80 transition-colors">
                     Login with Discord
                 </button>
             </div>
         </div>
 
         <!-- Order Summary -->
-        <div class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
+        <div
+            class="w-full md:w-1/3 bg-black/40 border-b md:border-b-0 md:border-r border-gray-800 p-6 md:p-8 flex flex-col order-1">
             <h2 class="text-gray-400 text-xs uppercase tracking-widest mb-6">Your Order</h2>
             <div class="flex items-start gap-4 mb-6">
-                <div class="w-16 h-16 bg-hacker-blue-dim border border-hacker-blue/30 rounded flex items-center justify-center flex-shrink-0">
+                <div
+                    class="w-16 h-16 bg-hacker-blue-dim border border-hacker-blue/30 rounded flex items-center justify-center flex-shrink-0">
                     <svg class="w-8 h-8 text-hacker-blue" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
                     </svg>
                 </div>
                 <div>
@@ -139,11 +152,13 @@
             <h1 class="title-scanlines text-2xl md:text-3xl font-bold text-white mb-6">CHECKOUT</h1>
 
             <div class="flex gap-6 border-b border-gray-800 mb-8" id="tabs">
-                <button class="tab-btn tab-active pb-3 text-sm font-bold tracking-wider transition-colors" data-tab="paypal">
+                <button class="tab-btn tab-active pb-3 text-sm font-bold tracking-wider transition-colors"
+                    data-tab="paypal">
                     PAYPAL
                 </button>
 
-                <button class="tab-btn tab-inactive pb-3 text-sm font-bold tracking-wider transition-colors" data-tab="crypto">
+                <button class="tab-btn tab-inactive pb-3 text-sm font-bold tracking-wider transition-colors"
+                    data-tab="crypto">
                     CRYPTO
                 </button>
             </div>
@@ -157,16 +172,61 @@
 
                 <div class="tab-content hidden" data-content="crypto">
                     <div class="bg-black/40 border border-gray-800 rounded p-6">
-                        Crypto checkout coming soon.
+                        <div class="flex flex-col md:flex-row gap-6 items-start">
+
+                            <!-- LEFT SIDE: QR CODE -->
+                            <div class="shrink-0 mx-auto md:mx-0">
+                                <div id="crypto-qr-wrapper" class="hidden flex flex-col items-center gap-2">
+                                    <div class="bg-white p-2 rounded shadow-[0_0_20px_rgba(59,130,246,0.25)]">
+                                        <div id="crypto-qr"></div>
+                                    </div>
+                                </div>
+
+                                <div id="qr-placeholder"
+                                    class="w-[200px] h-[200px] bg-gray-900/50 border border-gray-800 rounded flex items-center justify-center text-gray-600 text-xs text-center animate-pulse">
+                                    <span class="px-4">Loading...</span>
+                                </div>
+                            </div>
+
+                            <!-- RIGHT SIDE: DETAILS -->
+                            <div class="flex-1 w-full space-y-4">
+                                <div>
+                                    <label
+                                        class="block text-xs uppercase tracking-widest text-hacker-blue mb-2 font-bold">
+                                        Wallet Address
+                                    </label>
+
+                                    <!-- INPUT CONTAINER (Relative for button positioning) -->
+                                    <div class="relative group">
+                                        <input id="crypto-wallet-address" type="text" readonly
+                                            class="w-full bg-black/60 border border-gray-700 text-gray-300 text-sm font-mono rounded px-4 py-3 pr-24 focus:outline-none focus:border-hacker-blue focus:ring-1 focus:ring-hacker-blue/50 transition-all"
+                                            placeholder="Initializing..." />
+
+                                        <!-- COPY BUTTON (Inside input) -->
+                                        <button id="copy-btn" onclick="copyWalletAddress()"
+                                            class="absolute right-1 top-1 bottom-1 px-3 bg-gray-800 hover:bg-hacker-blue text-gray-300 hover:text-black text-[10px] font-bold rounded transition-colors uppercase tracking-wider border border-gray-700 hover:border-hacker-blue z-10 flex items-center justify-center">
+                                            COPY
+                                        </button>
+                                    </div>
+
+                                    <!-- TIMER STATUS (Moved OUTSIDE input container) -->
+                                    <div class="flex items-center gap-3 mt-4">
+                                        <button id="crypto-ticket-btn"
+                                            class="px-4 py-2 border border-hacker-blue text-hacker-blue text-[11px] font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 uppercase">
+                                            Create Ticket
+                                        </button>
+                                        <div id="crypto-ticket-status" class="text-xs text-gray-500 font-mono"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-               
             </div>
         </div>
-
     </main>
 
-    <!-- Footer -->
     <footer class="text-gray-600 text-xs text-center mt-10 mb-4">
         &copy; 2026 Sheldon Software
     </footer>
