--- a/checkout/index.html
+++ b/checkout/index.html
@@ -207,6 +207,9 @@
                                             class="px-4 py-2 border border-hacker-blue text-hacker-blue text-[11px] font-bold tracking-wider hover:bg-hacker-blue hover:text-black transition-all duration-300 uppercase">
                                             Create Ticket
                                         </button>
+                                        <p class="text-[11px] text-red-400 font-bold uppercase tracking-wide">
+                                            Don't send crypto without making a ticket
+                                        </p>
                                         <div id="crypto-ticket-status" class="text-xs text-gray-500 font-mono"></div>
                                     </div>
                                 </div>
