--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2 text-white group-hover:text-hacker-blue transition-colors">Visuals
                     </h3>
-                    <p class="text-gray-400 text-sm">Customizable visuals. But not the best performance (It's really
+                    <p class="text-gray-400 text-sm">Customizable visuals. I really try to make them look aesthetic and appealing (It's really
                         difficult)</p>
                 </div>
 
@@ -141,7 +141,7 @@
                     <h3 class="text-xl font-bold mb-2 text-white group-hover:text-hacker-blue transition-colors">
                         Features
                     </h3>
-                    <p class="text-gray-400 text-sm">Alot of cool and useful features to have fun in all games</p>
+                    <p class="text-gray-400 text-sm">Alot of cool and useful features to have fun in all games no matter their genre</p>
                 </div>
 
                 <div
@@ -155,8 +155,8 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2 text-white group-hover:text-hacker-blue transition-colors">
                         Straightforward
-                    </h3>
-                    <p class="text-gray-400 text-sm">Designed with ease of use (I also try to fix all bugs found)</p>
+                    </h3>   
+                    <p class="text-gray-400 text-sm">Designed with ease of use in mind. I also listen to the community for suggestions or fixing bugs</p>
                 </div>
             </div>
         </div>
