--- a/checkout/index.html
+++ b/checkout/index.html
@@ -159,6 +159,23 @@
             <div class="space-y-6">
                 <div class="tab-content block" data-content="paypal">
                     <div class="bg-black/40 border border-gray-800 rounded p-6">
+                        <div class="flex items-start gap-3 p-4 rounded border border-gray-800 bg-black/30">
+                            <div
+                                class="w-10 h-10 bg-hacker-blue-dim border border-hacker-blue/30 rounded flex items-center justify-center flex-shrink-0">
+                                <svg class="w-5 h-5 text-hacker-blue" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M9 12h6m-6 4h6M7 8h10M5 4h14a1 1 0 011 1v14a1 1 0 01-1 1H5a1 1 0 01-1-1V5a1 1 0 011-1z" />
+                                </svg>
+                            </div>
+                            <div class="space-y-1">
+                                <h3 class="text-white text-sm font-bold tracking-wider uppercase">Payment Notice</h3>
+                                <p class="text-xs text-gray-500 leading-relaxed">
+                                    If you buy with debit or credit, I don't save any of your personal details.
+                                    This is powered by PayPal and unfortunately I can't remove those inputs.
+                                </p>
+                            </div>
+                        </div>
+                        
                         <div id="paypal-button-container"></div>
                          <!-- <h1>because of technical issues with paypal, i cant support paypal as i am restricted.</h1> -->
                     </div>
