--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </p>
 
             <div class="flex flex-col sm:flex-row gap-4 justify-center mt-8 w-full max-w-md mx-auto sm:w-auto">
-                <a href="https://github.com/projectsheldon/sheldon-binaries/releases/download/Release/Sheldon.Alpha.zip"
+                <a href="https://github.com/projectsheldon/sheldon-binaries/releases/download/v1.0.1/Sheldon.Alpha.7z"
                     class="w-full sm:w-auto text-center px-8 py-3 bg-hacker-blue text-black font-bold hover:bg-blue-400 transition-all duration-300 shadow-neon transform hover:-translate-y-1">
                     DOWNLOAD
                 </a>
