--- a/checkout/index.html
+++ b/checkout/index.html
@@ -170,8 +170,7 @@
                             <div class="space-y-1">
                                 <h3 class="text-white text-sm font-bold tracking-wider uppercase">Payment Notice</h3>
                                 <p class="text-xs text-gray-500 leading-relaxed">
-                                    If you buy with debit or credit, I don't save any of your personal details.
-                                    This is powered by PayPal and unfortunately I can't remove those inputs.
+                                    If you buy with debit or credit, You can put a fake name or use Fake Name.
                                 </p>
                             </div>
                         </div>
