--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             </p>
 
             <div class="flex flex-col sm:flex-row gap-4 justify-center mt-8 w-full max-w-md mx-auto sm:w-auto">
-                <a href="https://github.com/projectsheldon/sheldon-binaries/releases/download/v1.0.1/Sheldon.Alpha.7z"
-                    class="w-full sm:w-auto text-center px-8 py-3 bg-hacker-blue text-black font-bold hover:bg-blue-400 transition-all duration-300 shadow-neon transform hover:-translate-y-1">
+                <button id="download-btn" type="button"
+                    class="w-full sm:w-auto text-center px-8 py-3 bg-hacker-blue text-black font-bold hover:bg-blue-400 transition-all duration-300 shadow-neon transform hover:-translate-y-1 disabled:opacity-70 disabled:cursor-not-allowed">
                     DOWNLOAD
-                </a>
+                </button>
                 <a href="#pricing"
                     class="w-full sm:w-auto text-center px-8 py-3 border border-hacker-blue text-hacker-blue hover:bg-hacker-blue hover:text-black transition-all duration-300 transform hover:-translate-y-1">
                     GET ACCESS
