--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sheldon - External | Latest Roblox External Version Download</title>
+    <title>Project Sheldon - External</title>
+    <meta name="description" content="Project Sheldon is a Roblox External by Penguu. Download the latest version and view access plans.">
     
     <link rel="icon" type="image/png" href="./favicon/favicon.ico">
 
@@ -66,9 +67,8 @@
             class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent pointer-events-none z-0">
         </div>
 
-        <div class="z-10 text-center space-y-6 px-4 pt-16">
-            <p class="text-hacker-blue tracking-widest text-xs md:text-sm uppercase animate-pulse">External Software /
-                By Penguu</p>
+        <div class="z-10 text-center space-y-6 px-4 pt-8 md:pt-10">
+            <p class="text-hacker-blue tracking-widest text-xs md:text-sm uppercase animate-pulse">Roblox External / By Penguu</p>
 
             <div class="relative">
                 <h1
@@ -77,10 +77,8 @@
                 </h1>
             </div>
 
-            <p class="text-gray-400 max-w-xs md:max-w-lg mx-auto text-sm md:text-base pt-2">
-                Powerful. Straight forward. Developed with users in mind.
-                <span class="text-hacker-blue opacity-80 text-xs mt-2 block font-bold tracking-wide">[its true
-                    tho]</span>
+            <p class="text-hacker-blue/80 text-[15px] md:text-xs uppercase tracking-widest relative -top-4">
+                Roblox • External • Project Sheldon • Penguu
             </p>
 
             <div class="flex flex-col sm:flex-row gap-4 justify-center mt-8 w-full max-w-md mx-auto sm:w-auto">
