--- a/license/index.html
+++ b/license/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheldon - License</title>
 
-    <link rel="stylesheet" href="../css/tailwind.bundle.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../js/managers/render/options.js"></script>
     <script src="../js/html/license.js" type="module"></script>
     <link rel="icon" type="image/png" href="../favicon/favicon.ico">
     
     <link rel="stylesheet" href="../../css/license.css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
 
     <base href="/">
 </head>
