--- a/checkout/index.html
+++ b/checkout/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheldon - Checkout</title>
 
-    <link rel="stylesheet" href="../css/tailwind.bundle.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
 
     <link rel="icon" type="image/png" href="../favicon/favicon.ico">
 
     <link href="../css/checkout.css" rel="stylesheet">
+    <script src="../js/managers/render/options.js"></script>
 
     <style>
         .min-h-safe {
