--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     
     <link rel="icon" type="image/png" href="./favicon/favicon.ico">
 
-    <link rel="stylesheet" href="css/tailwind.bundle.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./js/managers/render/options.js"></script>
+
     <link rel="stylesheet" href="css/base.css">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
 
     <base href="/">
 
