--- a/termsofservice.html
+++ b/termsofservice.html
@@ -5,7 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheldon</title>
     <link rel="icon" type="image/png" href="./favicon/favicon.ico">
-    <link rel="stylesheet" href="css/tailwind.bundle.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700;800&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'hacker-black': '#050505',
+                        'hacker-dark': '#0a0a0a',
+                        'hacker-blue': '#3b82f6',
+                        'hacker-blue-dim': 'rgba(59, 130, 246, 0.1)',
+                    },
+                    fontFamily: {
+                        mono: ['"JetBrains Mono"', 'monospace'],
+                    },
+                    boxShadow: {
+                        'neon': '0 0 10px #3b82f6, 0 0 20px #3b82f6',
+                    }
+                }
+            }
+        }
+    </script>
     <style>
         body {
             background-color: #050505;
